Setting up the project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="no">
+
 <head>
     <title>Prosjekt 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<p1>MIN FØRSTE TEKST!</p1>
+    <canvas id="art1" width="500" height="500"></canvas>
+    <script src="script.js"></script>
 </body>
 
 </html>
