Some grid-testing  Changes to be committed: 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-    <canvas id="art1" width="500" height="500"></canvas>
+    <div class="grid-container">
+        <div class = "box box1">
+            <canvas id="art1" width="500" height="500"></canvas>
+        </div>
+        <div class = "box box2">
+            <canvas id="art2" width="500" height="500"></canvas>
+        </div>
+        <div class="box box3">
+            HEIHEUIHEI
+        </div>
+        <div class="box box3">
+            HEIHEUIHEI
+        </div>
+        <div class="box box3">
+            HEIHEUIHEI
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
