Still not looking good  Changes to be committed: 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-    <div class="grid-container">
+
+    <div class="grid-container1">
+        <div class="site-logo">
+            <h1>Brødrene Surt Skum</h1>
+            <h2>Presenterer:</h2>
+        </div>
+        <div class="compose box4">compose</div>
+        <div class="canvas-o-svg">
+            sa
+        </div>
+    </div>
+
+    <div class="grid-container2">
         <div class = "box box1">
             <canvas id="art1" width="500" height="500"></canvas>
         </div>
