rare greier  Changes to be committed: 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
             <h1>Brødrene Surt Skum</h1>
             <h2>Presenterer:</h2>
         </div>
-        <div class="compose box4">compose</div>
-        <div class="canvas-o-svg">
-            sa
+        <div class="compose box4"><h1>COMPOSE</h1></div>
+        <div class="canvas">
+            <h1>CANVAS</h1>
+        </div>
+        <div class="svg">
+            <h1>SVG</h1>
         </div>
     </div>
 
