Fixed canvas functions and made design a little bit better.  Changes to be committed: 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,36 +7,25 @@
 </head>
 
 <body>
+    <div class="content">
+        <header>
+            <div class="artist-name">
+                DJ SOUR SCUM
+            </div>
+        </header>
 
-    <div class="grid-container1">
-        <div class="site-logo">
-            <h1>Brødrene Surt Skum</h1>
-            <h2>Presenterer:</h2>
+        <div class="artist-info">
+            <p>The infamus artist DJ Sour Scum represents a new masterpiece made explicit using canvas and svg. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quaerat eius veritatis cumque possimus? Dolor perspiciatis corporis labore. Exercitationem dolor quas distinctio nostrum tenetur nihil inventore voluptate minus dolores ullam?</p>
         </div>
-        <div class="compose box4"><h1>COMPOSE</h1></div>
-        <div class="canvas">
-            <h1>CANVAS</h1>
-        </div>
-        <div class="svg">
-            <h1>SVG</h1>
-        </div>
-    </div>
 
-    <div class="grid-container2">
-        <div class = "box box1">
-            <canvas id="art1" width="500" height="500"></canvas>
-        </div>
-        <div class = "box box2">
-            <canvas id="art2" width="500" height="500"></canvas>
-        </div>
-        <div class="box box3">
-            HEIHEUIHEI
-        </div>
-        <div class="box box3">
-            HEIHEUIHEI
-        </div>
-        <div class="box box3">
-            HEIHEUIHEI
+        <div class="grid-container2">
+            <div class="box box1">
+                <canvas id="art1" width="350" height="350"></canvas>
+                <h1>The bermuda baby</h1>
+            </div>
+            <div class="box box2">
+                <canvas id="art2" width="350" height="350"></canvas>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
