Beautify  Changes to be committed: 	modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </header>
 
         <div class="artist-info">
-            <p>The infamus artist DJ Sour Scum represents a new masterpiece made explicit using canvas and svg. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quaerat eius veritatis cumque possimus? Dolor perspiciatis corporis labore. Exercitationem dolor quas distinctio nostrum tenetur nihil inventore voluptate minus dolores ullam?</p>
+            <p>The infamus artist DJ Sour Scum represents a new masterpiece made explicit using canvas and svg. Lorem
+                ipsum dolor sit amet consectetur adipisicing elit. Illum quaerat eius veritatis cumque possimus? Dolor
+                perspiciatis corporis labore. Exercitationem dolor quas distinctio nostrum tenetur nihil inventore
+                voluptate minus dolores ullam?</p>
         </div>
 
         <div class="grid-container2">
