masterpiece working  Changes to be committed: 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="grid-container2">
             <div class="box box1">
                 <canvas id="art1" width="350" height="350"></canvas>
-                <h1>The bermuda baby</h1>
+                <h1>The bermuda squarangle</h1>
             </div>
             <div class="box box2">
                 <canvas id="art2" width="350" height="350"></canvas>
