--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Prosjekt 1</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,7 +22,7 @@
                 voluptate minus dolores ullam?</p>
         </div>
 
-        <div class="grid-container2">
+        <div class="grid-container">
             <div class="box box1">
                 <canvas id="art1" width="350" height="350"></canvas>
                 <h1>The bermuda squarangle</h1>
