Added smileyface  Changes to be committed: 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>The bermuda squarangle</h1>
             </div>
             <div class="box box2">
-                <canvas id="art2" width="350" height="350"></canvas>
+                <svg width = "350" height = "350"></svg>
                 <h1>The hidden SVG gem</h1>
             </div>
         </div>
