Added some more svg elements  Changes to be committed: 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="content">
         <header>
             <div class="artist-name">
-                DJ SOUR SCUM
+                Dalidor Salva
             </div>
         </header>
 
@@ -25,11 +25,16 @@
 
         <div class="grid-container">
             <div class="box box1">
-                <canvas id="art1" width="350" height="350"></canvas>
+                <canvas id="art1" width="350" height="350">Your browser does not support Canvas</canvas>
                 <h1>The bermuda squarangle</h1>
             </div>
             <div class="box box2">
-                <svg width = "350" height = "350"></svg>
+                <svg width = "350" height = "350">
+                    <rect id="svg-rect" x="116" y="58", width="116" height="232"></rect>
+                    <polygon id="triangle1" points="116,35 66,105 166,105" />
+                    <polygon id="triangle2" points="175,290 117,345 233,345" />
+                    <polygon id="square" points="290,35 290,110 215,110 215, 35" />
+                </svg>
                 <h1>The hidden SVG gem</h1>
             </div>
         </div>
