--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 virkeligheten skjuler begge store hemmelige egenskaper. De to verdenskjente kunsterene Dalidor Salva og
                 Salvador Dali kjempet på 1950-tallet om hvem som kunne lage de beste interaktive, abstrakte kunsverkene.
                 Lite visste selveste Dali at Salva hadde overvunnet kontrollen over Canvas-rammeverket. Javascriptkoden
-                fløt som krem og interaksjonene er spektakulære. Trykk på et av bildene da, og se hva som skjer!
+                fløt som krem og interaksjonene var spektakulære. Trykk på et av bildene da, og se hva som skjer!
             </p>
         </div>
         <div class="grid-container">
