Typo  Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -110,17 +110,13 @@
                         <br>
                         <br>
                         JQuery - <a
-                            href="https://www.tutorialspoint.com/jquery/jquery-quick-guide.htm">ToturialsPoint</a>
+                            href="https://www.tutorialspoint.com/jquery/jquery-quick-guide.htm">TutorialsPoint</a>
                         <br>
                         <br>
                         SVG - <a href="https://www.w3schools.com/graphics/svg_intro.asp">W3Schools</a>
                         <br>
                         <br>
                         Grid - <a href="https://www.youtube.com/watch?v=jV8B24rSN5o">Traversy Media @ Youtube</a>
-                        <br>
-                        <br>
-                        JQuery - <a
-                            href="https://www.tutorialspoint.com/jquery/jquery-quick-guide.htm">ToturialsPoint</a>
                         <br>
                         <br>
                     </p>
