added last reference  Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         fordi hvis jeg eventuelt ønsket å gjøre endringer i layout, tilbød grid flere muligheter. Alle
                         elementene på siden er wrappet inn i en div kalt content. Inne i content har jeg en
                         grid-container. Inne i denne containeren legger jeg til alle elementene jeg ønsker å posisjonere
-                        med css gridfunskjoner. Disse er slik at en rute er 2/3 av skjernen, mens andre ruta er 1/3 av
+                        med css gridfunskjoner. Disse er slik at en rute er 2/3 av skjermen, mens andre ruta er 1/3 av
                         skjermen. Hvis jeg skulle ønske å bygge på siden senere og teste ut forskjellige
                         layouts, gjør bruken av grid dette overkommelig.</p>
                 </div>
@@ -119,6 +119,7 @@
                         Grid - <a href="https://www.youtube.com/watch?v=jV8B24rSN5o">Traversy Media @ Youtube</a>
                         <br>
                         <br>
+                        Canvas animation - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations">Developer Mozilla</a>
                     </p>
                 </div>
                 <button id="btn1" class="btn">Show more</button>
