minor bugfixes  Changes to be committed: 	modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
                 fløt som krem og interaksjonene var spektakulære. Trykk på et av bildene da, og se hva som skjer!
             </p>
         </div>
+
         <div class="grid-container">
+
             <div class="box box1">
                 <canvas id="art1" width="350" height="350">Your browser does not support Canvas</canvas>
             </div>
+
             <div class="canvas-text">
                 <h3>THE BERMUDA SQUAREANGLE</h3>
                 <h4>- Dalidor Salva</h4>
             </div>
+
             <div class="svg-text">
                 <h3>THE HIDDEN SVG GEM</h3>
                 <h4>- Salvador Dali</h4>
             </div>
+
             <div class="box box2">
                 <svg id="svg-art" width="350" height="350">
                     <rect id="svg-rect" x="116" y="58" width="116" height="232"></rect>
@@ -47,10 +52,13 @@
                 </svg>
             </div>
         </div>
+
         <div class="documentation-grid">
+
             <div class="headline">
                 <h1>Dokumentasjon:</h1>
             </div>
+
             <div class="dokumentasjon">
                 <div id="show-less">
                     <h3>Grid vs flexbox</h3>
@@ -72,6 +80,7 @@
                         skjermen. Hvis jeg skulle ønske å bygge på siden senere og teste ut forskjellige
                         layouts, gjør bruken av grid dette overkommelig.</p>
                 </div>
+
                 <div id="show-more">
                     <h3>Canvas og SVG</h3>
                     <p>Canvas og SVG er begge teknologier som gjør at en kan tegne grafikk i nettlesere. Selv om begge
@@ -119,7 +128,20 @@
                         Grid - <a href="https://www.youtube.com/watch?v=jV8B24rSN5o">Traversy Media @ Youtube</a>
                         <br>
                         <br>
-                        Canvas animation - <a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations">Developer Mozilla</a>
+                        Canvas animation - <a
+                            href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations">Developer
+                            Mozilla</a>
+                        <br>
+                        <br>
+                        Når en skal gjøre et prosjekt som dette, er det klart at på web utvikling finnes uendelige
+                        ressurser en kan bruke. For min egen
+                        del prøver jeg å unngå å utelukkende bruke videoressurser, og fokuserer heller på å bruke
+                        skriftlige kilder eller dokumentasjoner.
+                        Jeg føler vet å bruke skriftlige ressurser gir det meg større rom for utforskelse, og læringen
+                        og danningen blir betraktelig bedre.
+                        Det finnes selvfølegelig småsmutter av kode her og der jeg har hentet inspirasjon fra, men i
+                        utgangspunktet er det de kildene nevnt
+                        ovenfor som er hovedressursene jeg har brukt.
                     </p>
                 </div>
                 <button id="btn1" class="btn">Show more</button>
@@ -127,6 +149,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    
 </body>
-
 </html>
