doing project ready for delivery  Changes to be committed: 	modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -89,17 +89,18 @@
                         veldig bra å bruke til statiske bilder som logoer og ikoner. På min nettside har jeg
                         definert alle svg elementene alene med en ID, slik at jeg kan manipulere dem med CSS og
                         Javascript. Canvas
-                        er derimot et Javaskrift tegne API, og her må en programmere hvordan grafikken skal være ved
+                        er derimot et Javascript tegne API, og her må en programmere hvordan grafikken skal være ved
                         hjelp av Javascript. Dette er kanskje noe mer tidkrevende å sette opp, men gir også mange
-                        flere muligheter, som for eksempel interaksjon. På min nettside har jeg laget
-                        standardfunksjoner som tegner forskjellige figurer i min canvas. Dette er funksjoner som
+                        flere muligheter, som for eksempel interaksjon og animering. På min nettside har jeg laget
+                        standardfunksjoner som tegner forskjellige figurer i mitt canvas. Dette er funksjoner som
                         drawSquare() og drawTriangle(). Ved å ha slike funksjoner kan jeg enkelt gjøre enkel
                         interaksjon med bildene. Ved klikk innenfor canvas-vinduet vil alle figurene bytte til en
                         tilfeldig farge, og enkelte figurer vil forstørres, mens andre blir tegnet på nytt med nye
                         koordinater.</p>
                     <h3>JQuery</h3>
                     <p>På min nettside har jeg for det meste bennyttet meg av JQuery i de sammengengene jeg vil at noe
-                        skal skje for eksempel når en bruker trykker på en knapp. JQuery er et Javascript bibliotek, som
+                        skal skje for eksempel når en bruker trykker på en knapp eller element på nettsiden. JQuery er
+                        et Javascript bibliotek, som
                         gjør HTML dokumenttraversering, event handling, animasjoner mm. enklere. For eksempel i oppgaven
                         hvor jeg
                         skulle ha en knapp som viste mer eller mindre tekst, har JQuery enkle funskjoner som kan utnytte
@@ -149,6 +150,7 @@
         </div>
     </div>
     <script src="script.js"></script>
-    
+
 </body>
+
 </html>
