--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
 
 </body>
 
